--- a/src/main/java/DemoUI.form
+++ b/src/main/java/DemoUI.form
@@ -48,7 +48,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value=""/>
+          <text value="zach_now"/>
         </properties>
       </component>
       <component id="6a822" class="javax.swing.JTextField" binding="textFieldQuery">
@@ -60,7 +60,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value=""/>
+          <text value="select * from DB_EMPLOYEE"/>
         </properties>
       </component>
       <component id="76416" class="javax.swing.JButton" binding="buttonQuery">
@@ -79,14 +79,19 @@
           <text value="Result"/>
         </properties>
       </component>
-      <component id="5b2a4" class="javax.swing.JTable" binding="tableResult">
+      <scrollpane id="5084b">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="5b2a4" class="javax.swing.JTable" binding="tableResult">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
